# PEA_Zad2

./: CMakeLists.txt  Diagrams.py  LICENSE  README.md  config.txt  main.cpp
data/: asymetryczne_tsp17.txt  asymetryczne_tsp33.txt  asymetryczne_tsp64.txt  identyczne_tsp10.txt  identyczne_tsp5.txt  identyczne_tsp6.txt  identyczne_tsp7.txt  identyczne_tsp8.txt  identyczne_tsp9.txt  niepelne_asymetryczne_tsp10.txt  niepelne_asymetryczne_tsp11.txt  niepelne_asymetryczne_tsp12.txt  niepelne_asymetryczne_tsp13.txt  niepelne_asymetryczne_tsp14.txt  niepelne_asymetryczne_tsp5.txt  niepelne_asymetryczne_tsp6.txt  niepelne_asymetryczne_tsp7.txt  niepelne_asymetryczne_tsp8.txt  niepelne_asymetryczne_tsp9.txt  niepelne_tsp10.txt  niepelne_tsp11.txt  niepelne_tsp12.txt  niepelne_tsp5.txt  niepelne_tsp6.txt  niepelne_tsp7.txt  niepelne_tsp8.txt  niepelne_tsp9.txt  tsp10.txt  tsp14.txt  tsp16.txt  tsp17.txt  tsp21.txt  tsp22.txt  tsp24.txt  tsp4.txt  tsp5.txt  tsp6.txt  tsp7.txt  tsp8.txt  tsp9.txt
